fix: removido overflow-y do card-info

--- a/src/components/card-list/styles.scss
+++ b/src/components/card-list/styles.scss
@@ -37,8 +37,6 @@ $imageHeight: 100px;
     border-radius: 12px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     width: 100%;
-    max-height: 300px;
-    overflow-y: scroll;
     padding: 12px 0px;
 }
 
